--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,25 @@ section, aside {
   border-right: 3px solid white;
   float: left;
 }
+button {
+  background: #36647F;
+  border: none; 
+  color: white;
+  font-size: 12px;
+}
+button:hover {
+  cursor: pointer;
+  background: #4682A6;
+}
+.close {
+  border-radius: 100px;
+  float: right;
+  padding: 2px;
+  width: 20px;
+  position: relative;
+  top: -5px;
+  right: -5px;
+}
 .container{
   width: 1000px;
   height: 1000px;
@@ -95,18 +114,10 @@ section, aside {
   margin: 0;
 }
 .new-tweets {
-  background: #36647F;
-  border: none;
   border-radius: 12px;
-  color: white;
   display: none;
-  font-size: 12px;
-  padding: 12px;
   margin: 3px auto;
-}
-.new-tweets:hover {
-  cursor: pointer;
-  background: #4682A6;
+  padding: 12px;
 }
 .tweet {
   margin: 10px 0;
